--- a/public/assets/css/orderpop.css
+++ b/public/assets/css/orderpop.css
@@ -82,7 +82,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,.4);
+    background: rgba(0,0,0,.8);
     z-index: 13000;
     visibility: hidden;
     opacity: 0;
@@ -343,4 +343,7 @@
 }
 .text-align-right{
   text-align:right
+}
+.hideimportant{
+  display:none !important;
 }
